[package]
name = "pars"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
anyhow = "1"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
scraper = "0.18"
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
fantoccini = "0.19"
serde_json = "1"
